# guarded-cm

./: .gitignore  Guarded.agda-lib  Makefile  README.md
lh/: TODO.md  guarded.cabal  stack.yaml
lh/src/: Hofmann.hs  Later.hs
src/: ClIrr.agda  Later.agda  LaterG.agda  Prim.agda
src/Clocked/: Colist.agda  Computation1.agda  Conat.agda  FairStream.agda  Hofmann.agda  Inftree.agda  Moore.agda  Partial.agda  ReplaceMin.agda  Resumption.agda  StrBisim.agda  Stream.agda  StreamF.agda  StreamFix.agda  Tree.agda
src/Clocked/Computation1/: Termination.agda
src/Clocked/Conat/: Arith.agda  Partial.agda  Stream.agda
src/Clocked/Partial/: All.agda  Converges.agda  Stream.agda
src/Clocked/Stream/: Eta.agda  Quantifiers.agda
src/Guarded/: Bizzare.agda  Bush.agda  BushA.agda  BushAFix.agda  BushFix.agda  BushNFix.agda  Colist.agda  Computation.agda  Computation1.agda  Conat.agda  Domain.agda  DomainG.agda  Hofmann.agda  ITree.agda  Loeb.agda  Mealy.agda  Moore.agda  Negative.agda  NegativeU.agda  Partial.agda  PartialG.agda  Provability.agda  Rec.agda  ReplaceMin.agda  Resumption.agda  RoseTree.agda  Stream.agda  StreamFix.agda  StreamG.agda  StreamGF.agda  StreamR.agda
src/Guarded/Colist/: Ops.agda  Relations.agda
src/Guarded/Conat/: Arith.agda  Partial.agda  Stream.agda  WLPO.agda
src/Guarded/Mealy/: Moore.agda  Resumption.agda  Run.agda  Stream.agda
src/Guarded/Moore/: Run.agda
src/Guarded/Partial/: All.agda  Arrow.agda  Converges.agda  DCPO.agda  Delayed.agda  Fin.agda  Poset.agda  Stream.agda
src/Guarded/RoseTree/: Conat.agda
(+2 files in other folders)
