Cabal-Version:       2.4
Name:                guarded
Version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md


library
  exposed-modules:
      Later, 
      Hofmann

  hs-source-dirs: src
  build-depends:
       liquidhaskell                     >= 0.8.10 && < 0.9
     , liquid-containers                 >= 0.6.2 && < 0.7
     , liquid-base
     , liquid-prelude
     , rest-rewrite                     
     , unordered-containers
     , hashable
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
